--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -2,6 +2,7 @@
 
  <h3 class="">Job</h3>
     <hr>
+<form ng-submit="empTabCtrl.updateForm()">
 <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
@@ -235,5 +236,6 @@
 </div>
 
  <div class="text-center">
-<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Save</button>
+<button type="button" class="btn btn-primary">Save</button>
 </div>
+</form>    
