--- a/src/app/common/components/gridBox/formVertical.html
+++ b/src/app/common/components/gridBox/formVertical.html
@@ -110,7 +110,7 @@
         <div class="col-sm-offset-3 col-sm-9">
             <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-primary">Save</button>
             <button type="button" class="btn btn-warning" ng-click="resetForm()">Reset</button>
-            <button type="button" class="btn btn-danger" ng-click="modalInstance.dismiss('cancel')">Close</button>
+            <button type="button" class="btn btn-danger" ng-click="closeForm()">Close</button>
         </div>
     </div>
 </form>
