--- a/src/app/pages/organization/employees/list/emp.list.html
+++ b/src/app/pages/organization/employees/list/emp.list.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
     <div class="col-md-3" ng-show="page.showFilter" style="padding-right:0px; margin-right:0px;  ">
         <filter-box page="page"></filter-box>
     </div>
@@ -7,4 +7,7 @@
         </grid-box>
     </div>
 </div>
+-->
 
+<grid-box ng-model="page">
+</grid-box>
